--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
 
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
+
     def room_version = "2.2.5"
 
     implementation "androidx.room:room-runtime:$room_version"
